--- a/ML_regression/ML_reg5/assignment.ipynb
+++ b/ML_regression/ML_reg5/assignment.ipynb
@@ -35,12 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "2fd337fd-ceb1-4266-b487-2015d3b47876",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n"
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression,Lasso,Ridge\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -59,38 +65,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f9ec42ac-a645-4d39-a809-acfbed5d30fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(250, 12)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>blood_pressure</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>glucose</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>heart_rate</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>diet_quality</th>\n",
+       "      <th>smoking_status</th>\n",
+       "      <th>alcohol_intake</th>\n",
+       "      <th>health_risk_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>24.865215</td>\n",
+       "      <td>122.347094</td>\n",
+       "      <td>165.730375</td>\n",
+       "      <td>149.289441</td>\n",
+       "      <td>22.306844</td>\n",
+       "      <td>75.866391</td>\n",
+       "      <td>1.180237</td>\n",
+       "      <td>7.675409</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.824123</td>\n",
+       "      <td>150.547752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>71</td>\n",
+       "      <td>19.103168</td>\n",
+       "      <td>136.852028</td>\n",
+       "      <td>260.610781</td>\n",
+       "      <td>158.584646</td>\n",
+       "      <td>13.869817</td>\n",
+       "      <td>69.481114</td>\n",
+       "      <td>7.634622</td>\n",
+       "      <td>8.933057</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.852910</td>\n",
+       "      <td>160.320350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>48</td>\n",
+       "      <td>22.316562</td>\n",
+       "      <td>137.592457</td>\n",
+       "      <td>177.342582</td>\n",
+       "      <td>178.760166</td>\n",
+       "      <td>22.849816</td>\n",
+       "      <td>69.386962</td>\n",
+       "      <td>7.917398</td>\n",
+       "      <td>3.501119</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4.740542</td>\n",
+       "      <td>187.487398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>34</td>\n",
+       "      <td>22.196893</td>\n",
+       "      <td>153.164775</td>\n",
+       "      <td>234.594764</td>\n",
+       "      <td>136.351714</td>\n",
+       "      <td>15.140336</td>\n",
+       "      <td>95.348387</td>\n",
+       "      <td>3.192910</td>\n",
+       "      <td>2.745585</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2.226231</td>\n",
+       "      <td>148.773138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>62</td>\n",
+       "      <td>29.837173</td>\n",
+       "      <td>92.768973</td>\n",
+       "      <td>276.106498</td>\n",
+       "      <td>158.753516</td>\n",
+       "      <td>17.228576</td>\n",
+       "      <td>77.680975</td>\n",
+       "      <td>7.044026</td>\n",
+       "      <td>8.918348</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3.944011</td>\n",
+       "      <td>170.609655</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age        bmi  blood_pressure  cholesterol     glucose    insulin  \\\n",
+       "0   58  24.865215      122.347094   165.730375  149.289441  22.306844   \n",
+       "1   71  19.103168      136.852028   260.610781  158.584646  13.869817   \n",
+       "2   48  22.316562      137.592457   177.342582  178.760166  22.849816   \n",
+       "3   34  22.196893      153.164775   234.594764  136.351714  15.140336   \n",
+       "4   62  29.837173       92.768973   276.106498  158.753516  17.228576   \n",
+       "\n",
+       "   heart_rate  activity_level  diet_quality smoking_status  alcohol_intake  \\\n",
+       "0   75.866391        1.180237      7.675409             No        0.824123   \n",
+       "1   69.481114        7.634622      8.933057             No        0.852910   \n",
+       "2   69.386962        7.917398      3.501119            Yes        4.740542   \n",
+       "3   95.348387        3.192910      2.745585             No        2.226231   \n",
+       "4   77.680975        7.044026      8.918348             No        3.944011   \n",
+       "\n",
+       "   health_risk_score  \n",
+       "0         150.547752  \n",
+       "1         160.320350  \n",
+       "2         187.487398  \n",
+       "3         148.773138  \n",
+       "4         170.609655  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 1: Import the data from the \"patient_health_data.csv\" file and store it in a variable 'df'\n",
-    "\n",
+    "df=pd.read_csv('patient_health_data.csv')\n",
     "\n",
     "# Step 2: Display the number of rows and columns in the dataset\n",
+    "print(df.shape)\n",
     "\n",
-    "\n",
-    "# Step 3: Display the first few rows of the dataset to get an overview\n"
+    "# Step 3: Display the first few rows of the dataset to get an overview\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "544ecea9-7860-4623-97ee-5218ee729282",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                  0\n",
+       "bmi                  0\n",
+       "blood_pressure       0\n",
+       "cholesterol          0\n",
+       "glucose              0\n",
+       "insulin              0\n",
+       "heart_rate           0\n",
+       "activity_level       0\n",
+       "diet_quality         0\n",
+       "smoking_status       0\n",
+       "alcohol_intake       0\n",
+       "health_risk_score    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 4: Check for any missing values in the dataset and handle them appropriately\n"
+    "# Step 4: Check for any missing values in the dataset and handle them appropriately\n",
+    "df.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f66339cd-ea78-443c-855c-9ebd9c936aa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>blood_pressure</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>glucose</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>heart_rate</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>diet_quality</th>\n",
+       "      <th>smoking_status</th>\n",
+       "      <th>alcohol_intake</th>\n",
+       "      <th>health_risk_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>24.865215</td>\n",
+       "      <td>122.347094</td>\n",
+       "      <td>165.730375</td>\n",
+       "      <td>149.289441</td>\n",
+       "      <td>22.306844</td>\n",
+       "      <td>75.866391</td>\n",
+       "      <td>1.180237</td>\n",
+       "      <td>7.675409</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.824123</td>\n",
+       "      <td>150.547752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>71</td>\n",
+       "      <td>19.103168</td>\n",
+       "      <td>136.852028</td>\n",
+       "      <td>260.610781</td>\n",
+       "      <td>158.584646</td>\n",
+       "      <td>13.869817</td>\n",
+       "      <td>69.481114</td>\n",
+       "      <td>7.634622</td>\n",
+       "      <td>8.933057</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.852910</td>\n",
+       "      <td>160.320350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>48</td>\n",
+       "      <td>22.316562</td>\n",
+       "      <td>137.592457</td>\n",
+       "      <td>177.342582</td>\n",
+       "      <td>178.760166</td>\n",
+       "      <td>22.849816</td>\n",
+       "      <td>69.386962</td>\n",
+       "      <td>7.917398</td>\n",
+       "      <td>3.501119</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.740542</td>\n",
+       "      <td>187.487398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>34</td>\n",
+       "      <td>22.196893</td>\n",
+       "      <td>153.164775</td>\n",
+       "      <td>234.594764</td>\n",
+       "      <td>136.351714</td>\n",
+       "      <td>15.140336</td>\n",
+       "      <td>95.348387</td>\n",
+       "      <td>3.192910</td>\n",
+       "      <td>2.745585</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.226231</td>\n",
+       "      <td>148.773138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>62</td>\n",
+       "      <td>29.837173</td>\n",
+       "      <td>92.768973</td>\n",
+       "      <td>276.106498</td>\n",
+       "      <td>158.753516</td>\n",
+       "      <td>17.228576</td>\n",
+       "      <td>77.680975</td>\n",
+       "      <td>7.044026</td>\n",
+       "      <td>8.918348</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.944011</td>\n",
+       "      <td>170.609655</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age        bmi  blood_pressure  cholesterol     glucose    insulin  \\\n",
+       "0   58  24.865215      122.347094   165.730375  149.289441  22.306844   \n",
+       "1   71  19.103168      136.852028   260.610781  158.584646  13.869817   \n",
+       "2   48  22.316562      137.592457   177.342582  178.760166  22.849816   \n",
+       "3   34  22.196893      153.164775   234.594764  136.351714  15.140336   \n",
+       "4   62  29.837173       92.768973   276.106498  158.753516  17.228576   \n",
+       "\n",
+       "   heart_rate  activity_level  diet_quality  smoking_status  alcohol_intake  \\\n",
+       "0   75.866391        1.180237      7.675409               0        0.824123   \n",
+       "1   69.481114        7.634622      8.933057               0        0.852910   \n",
+       "2   69.386962        7.917398      3.501119               0        4.740542   \n",
+       "3   95.348387        3.192910      2.745585               0        2.226231   \n",
+       "4   77.680975        7.044026      8.918348               0        3.944011   \n",
+       "\n",
+       "   health_risk_score  \n",
+       "0         150.547752  \n",
+       "1         160.320350  \n",
+       "2         187.487398  \n",
+       "3         148.773138  \n",
+       "4         170.609655  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 5: Encode the categorical variable 'smoking_status' by converting 'Yes' to 1 and 'No' to 0.\n"
+    "# Step 5: Encode the categorical variable 'smoking_status' by converting 'Yes' to 1 and 'No' to 0.\n",
+    "df['smoking_status']=df['smoking_status'].apply(lambda x: 1 if x=='Yes' else 0)\n",
+    "df.head()"
    ]
   },
   {
@@ -109,51 +435,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "10384638-ccbf-4ff0-a3f7-b1761f083aab",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1: Select the features and target variable for modeling\n",
-    "\n",
-    "\n",
-    "# Step 2: Split the data into training and test sets with a test size of 25%\n"
+    "X=df.drop(['health_risk_score'],axis=1)\n",
+    "y=df['health_risk_score']\n",
+    "# Step 2: Split the data into training and test sets with a test size of 25%\n",
+    "x_tr,x_te,y_tr,y_te=train_test_split(X,y,test_size=0.25,random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "d78f133c-a91c-4022-a29d-b56f83d3c76e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7639151597942184"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 3: Initialize and train a Linear Regression model, and evaluate its performance using R-squared\n"
+    "# Step 3: Initialize and train a Linear Regression model, and evaluate its performance using R-squared\n",
+    "model=LinearRegression()\n",
+    "model.fit(x_tr,y_tr)\n",
+    "model.score(x_te,y_te)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "9f4e756b-561b-4a42-b674-4d852482ea7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7819763683575137\n",
+      "0.7873364302158368\n",
+      "0.787254078140789\n"
+     ]
+    }
+   ],
    "source": [
-    "# Step 4: Initialize and train a Lasso Regression model with various alpha values provided in a list, and evaluate its performance using R-squared\n"
+    "# Step 4: Initialize and train a Lasso Regression model with various alpha values provided in a list, and evaluate its performance using R-squared\n",
+    "a=[1,10,10.1]\n",
+    "for al in a:\n",
+    "    model=Lasso(alpha=al)\n",
+    "    model.fit(x_tr,y_tr)\n",
+    "    score=model.score(x_te,y_te)\n",
+    "    print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "45206af6-ea76-4947-abac-681008cb3857",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7640279385968278\n",
+      "0.7650129217854336\n",
+      "0.7859528834174001\n"
+     ]
+    }
+   ],
    "source": [
-    "# Step 5: Initialize and train a Ridge Regression model with various alpha values provided in a list, and evaluate its performance using R-squared\n"
+    "# Step 5: Initialize and train a Ridge Regression model with various alpha values provided in a list, and evaluate its performance using R-squared\n",
+    "a=[1,10,10000]\n",
+    "for al in a:\n",
+    "    model=Ridge(alpha=al)\n",
+    "    model.fit(x_tr,y_tr)\n",
+    "    score=model.score(x_te,y_te)\n",
+    "    print(score)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
